martin-mbtiles/tests/snapshots/mbtiles__diff_and_apply@delta__hash-flat=flat.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: result
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "14B153DD59C83002812530F047000CF1"  )',
    '(  "agg_tiles_hash_after_apply", "E3919F24AF46757C7B060150071FB0D9"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-remove", NULL  )',
]

[[]]
type = 'table'
tbl_name = 'tiles'
sql = '''
CREATE TABLE tiles (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  1, 0, 1, blob(edit-v2)  )',
    '(  1, 1, 0, blob(new)  )',
    '(  1, 1, 1, NULL  )',
    '(  2, 0, 1, blob(z2-edit-v2)  )',
    '(  2, 1, 0, blob(z2-new)  )',
    '(  2, 1, 1, NULL  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles'
