martin-mbtiles/tests/snapshots/mbtiles__diff_and_apply@delta__norm-norm=hash.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: result
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "14B153DD59C83002812530F047000CF1"  )',
    '(  "agg_tiles_hash_after_apply", "E3919F24AF46757C7B060150071FB0D9"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-remove", NULL  )',
]

[[]]
type = 'table'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE TABLE tiles_with_hash (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             tile_hash text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  1, 0, 1, blob(edit-v2), "FF76830FF90D79BB335884F256031731"  )',
    '(  1, 1, 0, blob(new), "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
    '(  1, 1, 1, NULL, NULL  )',
    '(  2, 0, 1, blob(z2-edit-v2), "E848A12B5761ED5E713D8286F7460C98"  )',
    '(  2, 1, 0, blob(z2-new), "8FF2EF577CE68CA2A07E6382D8A4C5FF"  )',
    '(  2, 1, 1, NULL, NULL  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles_with_hash'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT zoom_level, tile_column, tile_row, tile_data FROM tiles_with_hash'''
